--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
+    <!--menu-->
     <ImageView
         android:id="@+id/menu"
         android:layout_width="45dp"
@@ -16,6 +16,40 @@
         android:focusable="true"
         android:padding="10dp"
         android:src="@drawable/menu" />
+    <!--头部信息-->
+    <android.support.v7.widget.CardView
+        android:id="@+id/head_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/main_view"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:elevation="4dp"
+        app:cardCornerRadius="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp">
+
+
+            <TextView
+                android:id="@+id/enddate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:text="20190801"
+                android:textColor="@color/secondary_text"
+                android:textStyle="bold"
+                android:textSize="28sp" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+    <!--信息-->
     <android.support.v7.widget.CardView
         android:id="@+id/info_view"
         android:layout_width="match_parent"
@@ -31,6 +65,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:paddingLeft="10dp"
             android:paddingTop="10dp">
@@ -53,6 +88,7 @@
                 android:textSize="16sp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
+    <!--前景照片-->
     <android.support.v7.widget.CardView
         android:id="@+id/main_view"
         android:layout_width="match_parent"
@@ -71,7 +107,6 @@
             android:adjustViewBounds="true"
             android:src="@drawable/test" />
     </android.support.v7.widget.CardView>
-
 
 
 </RelativeLayout>
