--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
         android:layout_centerInParent="true"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginRight="15dp"
         android:elevation="4dp"
         app:cardCornerRadius="10dp">
@@ -65,7 +66,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:orientation="vertical"
             android:paddingLeft="10dp"
             android:paddingTop="10dp">
@@ -96,6 +97,7 @@
         android:layout_centerInParent="true"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:layout_marginRight="15dp"
         android:elevation="4dp"
         app:cardCornerRadius="10dp">
