--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,8 +45,8 @@
                 android:layout_marginBottom="20dp"
                 android:text="20190801"
                 android:textColor="@color/secondary_text"
-                android:textStyle="bold"
-                android:textSize="28sp" />
+                android:textSize="28sp"
+                android:textStyle="bold" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
     <!--信息-->
@@ -58,8 +58,8 @@
         android:layout_centerInParent="true"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
         android:elevation="4dp"
         app:cardCornerRadius="10dp">
 
@@ -97,8 +97,8 @@
         android:layout_centerInParent="true"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
         android:elevation="4dp"
         app:cardCornerRadius="10dp">
 
@@ -109,6 +109,4 @@
             android:adjustViewBounds="true"
             android:src="@drawable/test" />
     </android.support.v7.widget.CardView>
-
-
 </RelativeLayout>
