--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,8 +105,8 @@
         <ImageView
             android:id="@+id/main_pic"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/test" />
+             />
     </android.support.v7.widget.CardView>
 </RelativeLayout>
