--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,7 +105,8 @@
         <ImageView
             android:id="@+id/main_pic"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/loading_"
             android:adjustViewBounds="true"
              />
     </android.support.v7.widget.CardView>
