--- a/app/src/main/res/layout/dialog_menu.xml
+++ b/app/src/main/res/layout/dialog_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/transparent"
@@ -10,94 +9,94 @@
         android:id="@+id/v1"
         style="@style/menu_item">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
             android:orientation="horizontal">
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-
-                android:src="@drawable/setting_icon"/>
+                android:layout_marginStart="30dp"
+                android:src="@drawable/icon_myself"/>
             <TextView
                 style="@style/menu_text"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="设置" />
-        </LinearLayout>
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="30dp"
+                android:text="我的" />
+        </FrameLayout>
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
         android:id="@+id/v2"
         style="@style/menu_item">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
             android:orientation="horizontal">
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-
-                android:src="@drawable/setting_icon"/>
+                android:layout_marginStart="30dp"
+                android:src="@drawable/icon_download"/>
             <TextView
                 style="@style/menu_text"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="设置" />
-        </LinearLayout>
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="30dp"
+                android:text="缓存" />
+        </FrameLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
         android:id="@+id/v3"
         style="@style/menu_item">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
             android:orientation="horizontal">
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-
-                android:src="@drawable/setting_icon"/>
+                android:layout_marginStart="30dp"
+                android:src="@drawable/icon_setting"/>
             <TextView
                 style="@style/menu_text"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="30dp"
                 android:text="设置" />
-        </LinearLayout>
+        </FrameLayout>
     </android.support.v7.widget.CardView>
     <android.support.v7.widget.CardView
         android:id="@+id/v4"
         style="@style/menu_item">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center"
             android:orientation="horizontal">
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-
-                android:src="@drawable/setting_icon"/>
+                android:layout_marginStart="30dp"
+                android:src="@drawable/icon_about"/>
             <TextView
                 style="@style/menu_text"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="设置" />
-        </LinearLayout>
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="30dp"
+                android:text="关于" />
+        </FrameLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
