--- a/app/src/main/res/layout/item_progressbar.xml
+++ b/app/src/main/res/layout/item_progressbar.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    app:cardCornerRadius="12dp"
     android:background="@color/transparent"
-    >
+    android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tab_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="天空"
+        android:textSize="16sp" />
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="4dp">
 
         <ProgressBar
             android:id="@+id/progress_bar"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:layout_width="match_parent"
-            android:layout_height="25dp"
+            android:layout_height="8dp"
             android:max="100"
-            android:maxHeight="50dp"
-            android:minHeight="16dp"
             android:progress="20"
             android:progressDrawable="@drawable/background_progressbar" />
-        <TextView
-            android:id="@+id/tab_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:text="天空"
-            android:layout_gravity="center_vertical"
-            android:textSize="16sp" />
+    </android.support.v7.widget.CardView>
 
 
-
-</android.support.v7.widget.CardView>
+</LinearLayout>
