--- a/app/src/main/res/layout/item_progressbar.xml
+++ b/app/src/main/res/layout/item_progressbar.xml
@@ -4,6 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/transparent"
+    android:paddingLeft="20dp"
+    android:paddingRight="20dp"
     android:orientation="vertical">
 
     <TextView
