--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
 
     <color name="transparent">#00ffffff</color>
     <color name="white">#FFFFFF</color>
-
+    <color name="black">#000</color>
 
 
     <color name="start">#70e1f5</color>
