--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,4 +43,16 @@
         <item name="android:focusable">true</item>
         <item name="android:foreground">?attr/selectableItemBackgroundBorderless</item>
     </style>
+    <style name="home_btn" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_height">80dp</item>
+        <item name="android:layout_width">80dp</item>
+        <item name="android:layout_margin">0dp</item>
+        <item name="android:padding">0dp</item>
+    </style>
+    <!--更新对话框样式-->
+    <style name="update_dialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowNoTitle">true</item><!--无标题-->
+        <item name="android:windowBackground">@color/white</item><!--背景透明-->
+
+    </style>
 </resources>
