--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
 
     <color name="start">#70e1f5</color>
     <color name="end">#ffd194</color>
+    <color name="red">#F44336</color>
+    <color name="red_dark">#A71E13</color>
 
 
 
