--- a/app/src/main/res/drawable/selector_item.xml
+++ b/app/src/main/res/drawable/selector_item.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--松开-->
-    <item android:state_pressed="false">
-        <color android:color="@color/colorPrimary"/>
-    </item>
+
     <!--按下-->
     <item android:state_pressed="true">
-        <color android:color="@color/white"/>
+        <color android:color="@color/red_dark"/>
+    </item>
+    <!--未按-->
+    <item android:state_pressed="false">
+        <color android:color="@color/red"/>
     </item>
 </selector>
