--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="transparent">#00ffffff</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000</color>
+    <color name="blue">#2196F3</color>
 
 
     <color name="start">#70e1f5</color>
