--- a/app/src/main/res/layout/activity_myself.xml
+++ b/app/src/main/res/layout/activity_myself.xml
@@ -21,8 +21,7 @@
     <RelativeLayout
         android:id="@+id/layout_1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -94,23 +93,24 @@
     <!--注册界面-->
     <RelativeLayout
         android:id="@+id/layout_2"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <LinearLayout
+            android:id="@+id/layout_2_1"
             android:layout_width="280dp"
-            android:layout_marginTop="50dp"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_marginTop="50dp"
             android:orientation="vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/user_image"
-                android:layout_marginTop="15dp"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="15dp"
                 android:src="@drawable/icon" />
 
             <android.support.design.widget.TextInputLayout
@@ -127,9 +127,9 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:layout_marginTop="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:hint="密码"
                 android:orientation="vertical">
 
@@ -142,8 +142,8 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="重复密码"
                 android:layout_marginTop="15dp"
+                android:hint="重复密码"
                 android:orientation="vertical">
 
                 <android.support.design.widget.TextInputEditText
@@ -163,5 +163,22 @@
                 android:textColor="@color/white"
                 android:textSize="18sp" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/other_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout_2_1"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="30dp"
+            android:text="-其他接入方式-" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/other_login"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="25dp"
+            android:text="即将到来" />
     </RelativeLayout>
 </FrameLayout>
