--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,4 +2,7 @@
     <external-files-path
         name="apk_path"
         path="apk" />
+    <external-files-path
+        name="img_path"
+        path="img"/>
 </paths>
