--- a/app/src/main/res/layout/activity_myself.xml
+++ b/app/src/main/res/layout/activity_myself.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,27 +8,28 @@
 
     <ImageView
         android:id="@+id/back"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="53dp"
+        android:layout_height="49dp"
         android:layout_margin="20dp"
         android:background="@drawable/selector_btn"
         android:clickable="true"
         android:focusable="true"
         android:padding="10dp"
-        android:src="@drawable/icon_back" />
-
+        android:src="@drawable/icon_back"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <!--未登录-->
     <RelativeLayout
         android:id="@+id/layout_1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -183,40 +184,92 @@
             android:text="即将到来" />
     </RelativeLayout>
 
+    <!--已登录-->
     <android.support.constraint.ConstraintLayout
         android:id="@+id/layout_3"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <TextView
+            android:id="@+id/log_out"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:layout_marginRight="40dp"
+            android:text="退出登录"
+            android:textColor="@color/gloss"
+            android:textSize="24sp"
+            android:textStyle="bold|italic"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <!--用户信息界面-->
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_margin="16dp"
+            android:layout_height="140dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginRight="15dp"
             app:cardBackgroundColor="@color/colorPrimary"
-            app:cardCornerRadius="18dp"
-            app:layout_constraintTop_toTopOf="@id/layout_3">
+            app:layout_constraintTop_toTopOf="@id/layout_3"
+            app:layout_constraintLeft_toLeftOf="@id/layout_3"
+            app:cardCornerRadius="14dp"
+            app:cardElevation="2dp"
+            >
 
-            <ImageView
-                android:id="@+id/user_photo"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="20dp"
-                android:background="@color/white" />
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="30dp">
+                <!--用户头像-->
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/user_photo"
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/user_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|end"
-                android:layout_marginRight="20dp"
-                android:text="用户id"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                android:textStyle="bold|italic" />
+                <!--用户名-->
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:text="用户id"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold|italic"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+                <!--收藏-->
+                <TextView
+                    android:id="@+id/zan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="赞:8"
+                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent" />
+
+                <TextView
+                    android:id="@+id/comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
+                    android:text="评论:2"
+                    android:textColor="@color/white"
+                    android:textSize="22sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toLeftOf="@+id/zan" />
+            </android.support.constraint.ConstraintLayout>
 
         </android.support.v7.widget.CardView>
-
     </android.support.constraint.ConstraintLayout>
-</FrameLayout>
+
+
+</android.support.constraint.ConstraintLayout>
