--- a/app/src/main/res/layout/activity_cache.xml
+++ b/app/src/main/res/layout/activity_cache.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CacheActivity">
+    tools:context=".activity.CacheActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
