--- a/app/src/main/res/layout/activity_pic_panorama.xml
+++ b/app/src/main/res/layout/activity_pic_panorama.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PicPanoramaActivity">
+    tools:context=".activity.PicPanoramaActivity">
 
     <com.gjiazhe.panoramaimageview.PanoramaImageView
         android:id="@+id/panorama_image_view"
